blocks/profile.css
.profile {
  padding-top: 40px;
  display: flex;
  align-items: center;
}

.profile__image {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  margin-right: 24px;
}

.profile__info {
  display: grid;
  grid-template-areas:
    "title button"
    "description description";
  grid-template-columns: minmax(auto, 375px) auto;
  grid-gap: 7px 18px;
}

.profile__header {
  margin: 0;
  font-family: Inter, Arial, sans-serif;
  font-size: 42px;
  font-weight: 500;
  line-height: 48px;
  letter-spacing: 0em;
  text-align: left;
  align-self: center;
  grid-area: title;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.profile__edit-button {
  background: transparent url(../images/edit-icon.svg) center no-repeat;
  width: 24px;
  height: 24px;
  border: 1px solid #ffffff;
  grid-area: button;
  align-self: center;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.profile__edit-button:hover {
  opacity: 0.6;
}

.profile__description {
  font-family: Inter, Arial, sans-serif;
  font-size: 18px;
  line-height: 22px;
  font-weight: 400;
  margin: 0;
  grid-area: description;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 373px;
  overflow: hidden;
}

.profile__add-button {
  background: transparent url(../images/add-icon.svg) center no-repeat;
  width: 150px;
  height: 50px;
  margin-left: auto;
  border: 2px solid #ffffff;
  border-radius: 2px;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.profile__add-button:hover {
  opacity: 0.6;
}

@media screen and (max-width: 480px) {
  .profile {
    flex-direction: column;
    padding: 0;
  }

  .profile__image {
    margin: 42px 0 30px;
  }

  .profile__info {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    grid-gap: 0 10px;
  }

  .profile__header {
    font-family: Inter;
    font-size: 22px;
    font-weight: 500;
    line-height: 27px;
    letter-spacing: 0;
    text-align: center;
  }

  .profile__description {
    width: 100%;
    margin-top: 14px;
    margin-bottom: 36px;
    font-family: Inter;
    font-size: 14px;
    font-weight: 400;
    line-height: 17px;
    letter-spacing: 0;
    text-align: center;
  }

  .profile__add-button {
    margin: 0;
    width: 282px;
  }

  .profile__edit-button {
    width: 18px;
    height: 18px;
  }
}

